# tauri-easy-updater

./: .eslintrc.cjs  .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: publish.yml  test.yml
crates/tauri-easy-updater/: Cargo.toml
crates/tauri-easy-updater/src/: commands.rs  lib.rs  types.rs
crates/tauri-easy-updater/src/providers/: github.rs  http.rs  mod.rs
