[package]
name = "tauri-easy-updater"
version = "0.1.0"
edition = "2021"
description = "Hassle-free auto-updates for Tauri apps. No signing keys required."
license = "MIT"
repository = "https://github.com/keylertamayo/tauri-easy-updater"

[dependencies]
tauri = { version = "1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
semver = "1"

